# reader

./: .gitignore  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_REPORT.md  PHASE3_FEATURES.md  README.md  TODO.md  pyproject.toml  sample_chapters.json
.claude/agents/: code-optimizer.md  feature-research-planner.md  python-feature-developer.md
audio/: .gitkeep
docs/: ADVANCED_FEATURES.md  API.md  EXAMPLES.md  KOKORO_SETUP.md  PHASE3_FEATURES.md  README.md  USAGE.md  VOICES.md
reader/: __init__.py  api.py  cli.py  config.py
reader/analysis/: __init__.py  dialogue_detector.py  emotion_detector.py  gender_detector.py  ssml_generator.py
reader/audio/: __init__.py  ffmpeg_processor.py
reader/batch/: __init__.py  batch_processor.py  checkpoint_manager.py  neural_processor.py  parallel_processor.py  rich_progress.py  robust_processor.py  stream_processor.py  timeseries_progress.py  tqdm_progress.py
reader/chapters/: chapter_manager.py
reader/engines/: kokoro_engine.py  pyttsx3_engine.py
reader/parsers/: epub_parser.py  pdf_parser.py  text_parser.py
reader/processors/: ffmpeg_processor.py
reader/text_processing/: __init__.py  content_classifier.py  heading_detector.py  number_expander.py  phonemizer.py  text_cleaner.py
reader/utils/: model_downloader.py  setup.py
reader/voices/: character_mapper.py  voice_previewer.py
test/: multi_char.characters.yaml  test_character_voices.characters.yaml
tests/: __init__.py  test_cli.py  test_config.py  test_content_classifier.py  test_engines.py  test_heading_detector.py  test_parsers.py
tests/fixtures/: italian_long.txt  italian_test.txt  multi_char.characters.yaml  multi_char.txt  test_character_voices.txt
text/: .gitkeep  sample.txt
