[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "audiobook-reader"
version = "0.3.1"
description = "AI-powered audiobook generator with GPU/NPU acceleration (up to 10x faster than real-time). Built-in Kokoro-82M TTS with character-aware voices and dialogue detection. Interactive chapter stripping to remove unwanted content. Supports EPUB, PDF, TXT, MD, RST (use convertext for DOCX/MOBI/HTML)."
authors = ["danielcorsano <danielcorsano@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/danielcorsano/reader"
repository = "https://github.com/danielcorsano/reader"
documentation = "https://github.com/danielcorsano/reader/tree/main/docs"
keywords = [
    "audiobook",
    "text-to-speech",
    "tts",
    "kokoro",
    "neural-engine",
    "apple-silicon",
    "m1",
    "m2",
    "m3",
    "m4",
    "epub",
    "pdf",
    "cli",
    "audio",
    "conversion",
    "character-voices",
    "dialogue-detection"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Text Processing",
    "Environment :: Console",
]
packages = [{include = "reader"}]

[tool.poetry.scripts]
reader = "reader.cli:cli"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
# Core dependencies
click = "^8.1.7"
pyyaml = "^6.0.1"
beautifulsoup4 = "^4.12.2"
ebooklib = "^0.18"
PyPDF2 = "^3.0.1"
# TTS engine
kokoro-onnx = "^0.5.0"
onnxruntime = "^1.20.0"
regex = "^2023.12.25"
# Audio processing
mutagen = "^1.47.0"
ffmpeg-python = "^0.2.0"
plotext = "^5.3.2"
# Optional dependencies
psutil = {version = "^7.1.0", optional = true}
tqdm = {version = "^4.67.0", optional = true}
rich = {version = "^14.0.0", optional = true}
misaki = {version = "^0.7.0", optional = true}
num2words = {version = ">=0.5.13", optional = true}
spacy = {version = ">=3.7.0", optional = true}

[tool.poetry.extras]
# System monitoring
monitoring = ["psutil"]
# Progress visualizations
progress-full = ["tqdm", "rich"]
progress-tqdm = ["tqdm"]
progress-rich = ["rich"]
# G2P phonemization (improved pronunciation via misaki, without conflicting phonemizer)
g2p-en = ["misaki", "num2words", "spacy"]
# All optional features
all = ["psutil", "tqdm", "rich", "misaki", "num2words", "spacy"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
flake8 = "^6.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]